@@ -33,6 +33,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - We now catch the NotAMemberError exception thrown if an authenticated
+      unsubscribe is submitted from the user options page for a nonmember.
+      (LP: #1390653)
+
     - Fixed an archiving bug that would cause messages with 'Subject: Re:'
       only to be indexed in the archives without a link to the message.
       (LP: #1388614)
